--- a/views/partials/scriptPartials/textEditorScripts.handlebars
+++ b/views/partials/scriptPartials/textEditorScripts.handlebars
@@ -538,6 +538,11 @@
         });
     }
 
+    //gets the position to the element's top relative to the top of the screen, like how the css top property works with position:fixed
+    function getTop(e){
+        return e.offset().top-$(window).scrollTop();
+    }
+
     //called as soon as movement is initiated:
     //this functions creates and returns a new, floaty version of the element you pass in and turns the original into an empty "spacer"
     function prepareImageForMoving(selectedImage) {
@@ -551,11 +556,9 @@
         spacer.addClass("imagecontspacer");
         spacer.attr('id', '');
 
-        var imagecontpos = spacer.offset();
-
         imagecont.css("width", spacer.outerWidth(true) + "px");
-        imagecont.css("left", imagecontpos.left + "px");
-        imagecont.css("top", imagecontpos.top + "px");
+        imagecont.css("left", spacer.offset().left + "px");
+        imagecont.css("top", getTop(spacer) + "px");
 
         spacer.closest('.ql-container').append(imagecont);
 
@@ -572,24 +575,29 @@
         return imagecont;
     }
 
+    //todo: add function that checks if the floating element is within a certain distance of the top or bottom of the screen, and scrolls if so.
+    //it should check every 200ms or so i guess. it'll have to be started by a call from the above function, that passes imagecont to it. then, it should
+    //be cancelled in movementEnded.
+
     //this function is called when the user moves either their mouse or finger to reposition the embed.
     function moveimagecont(deltaY, imagecont, spacer) {
         //move the floaty element:
-        var imageconttop = imagecont.offset().top;
+        var imageconttop = getTop(imagecont);
+        var spacertop = getTop(spacer);
         var imageconth = imagecont.outerHeight(true);
         //new y pos is the old y pos + the mouse's delta-y unless that's less than the parent's top bound or more than the parent's bottom bound - the height of the element
-        var newYPos = Math.min(Math.max(imageconttop + deltaY, spacer.parent().offset().top), spacer.parent().offset().top + (spacer.parent().outerHeight() - spacer.outerHeight())); //beauty
+        var newYPos = Math.min(Math.max(imageconttop + deltaY, getTop(spacer.parent())), getTop(spacer.parent()) + (spacer.parent().outerHeight() - spacer.outerHeight())); //beauty
         imagecont.css("top", newYPos + "px");
 
         //move the spacer (maybe):
 
         if (deltaY > 0) { //moving down
             var elementBelow = spacer.next();
-            while (elementBelow.length && elementBelow.next().length && (imageconttop + imageconth) > (elementBelow.offset().top + elementBelow.outerHeight(true))) {
+            while (elementBelow.length && elementBelow.next().length && (imageconttop + imageconth) > (getTop(elementBelow) + elementBelow.outerHeight(true))) {
                 elementBelow = elementBelow.next();
             }
             if (elementBelow.length) {
-                var ebt = elementBelow.offset().top;
+                var ebt = getTop(elementBelow);
                 var line = Math.max(ebt + (0.5 * elementBelow.outerHeight(true)), ebt + elementBelow.outerHeight(true) - 70);
                 if ((imageconttop + imageconth) > line) {
                     spacer.insertAfter(elementBelow);
@@ -597,11 +605,11 @@
             }
         } else if (deltaY < 0) { //moving up
             var elementAbove = spacer.prev();
-            while (elementAbove.length && elementAbove.prev().length && imageconttop < elementAbove.offset().top) {
+            while (elementAbove.length && elementAbove.prev().length && imageconttop < getTop(elementAbove)) {
                 elementAbove = elementAbove.prev();
             }
             if (elementAbove.length) {
-                var line = Math.min(elementAbove.offset().top + (0.5 * elementAbove.outerHeight(true)), elementAbove.offset().top + 70);
+                var line = Math.min(getTop(elementAbove) + (0.5 * elementAbove.outerHeight(true)), getTop(elementAbove) + 70);
                 if (imageconttop < line) {
                     spacer.insertBefore(elementAbove);
                 }
